[gd_scene load_steps=3 format=2]

[ext_resource path="res://ingame_gui/ingame_gui.gd" type="Script" id=1]
[ext_resource path="res://pickups/health/heart.png" type="Texture" id=2]

[node name="IngameGUI" type="Control" groups=[
"download_state_subscriber",
"pause_subscriber",
"player_health_subscriber",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aborting" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = -50.0

[node name="Label" type="Label" parent="Aborting"]
anchor_right = 1.0
anchor_bottom = 0.5
text = "Signal lost! Aborting download..."
align = 1
valign = 1

[node name="SecondsRemaining" type="Label" parent="Aborting"]
modulate = Color( 1, 0, 0, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
text = "11"
align = 1
valign = 1

[node name="DownloadProgressBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadFailed" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DownloadFailed"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
text = "Download failed.
You will not watch your favorite movie tonight :("
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="DownloadFailed"]
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = -5.0
margin_bottom = -10.0
text = "Retry"

[node name="MainMenu" type="Button" parent="DownloadFailed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -60.0
margin_right = -10.0
margin_bottom = -10.0
text = "Main Menu"

[node name="DownloadSucceeded" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DownloadSucceeded"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
text = "Download succeeded!
Wanna download another movie?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="DownloadSucceeded"]
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = -5.0
margin_bottom = -10.0
text = "Retry"

[node name="MainMenu" type="Button" parent="DownloadSucceeded"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -60.0
margin_right = -10.0
margin_bottom = -10.0
text = "Main Menu"

[node name="PlayerDied" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerDied"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
text = "You died.
No movies for you anymore :("
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="PlayerDied"]
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = -5.0
margin_bottom = -10.0
text = "Retry"

[node name="MainMenu" type="Button" parent="PlayerDied"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -60.0
margin_right = -10.0
margin_bottom = -10.0
text = "Main Menu"

[node name="PauseMenu" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenu"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
text = "Game paused."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="PauseMenu"]
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = -5.0
margin_bottom = -10.0
text = "Retry"

[node name="MainMenu" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -60.0
margin_right = -10.0
margin_bottom = -10.0
text = "Main Menu"

[node name="Health" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="TextureRect" parent="Health"]
modulate = Color( 0.631373, 0, 0, 1 )
anchor_bottom = 1.0
margin_right = 50.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Health"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 55.0
margin_bottom = 0.00723648
text = "100"
valign = 1

[connection signal="pressed" from="DownloadFailed/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="DownloadFailed/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="DownloadSucceeded/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="DownloadSucceeded/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PlayerDied/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="PlayerDied/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseMenu/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="PauseMenu/MainMenu" to="." method="_on_main_menu_pressed"]
